# InferenceVertificationEcapatdnn

./: .gitignore  README.md  database.py  inference.py  main.py  pyproject.toml  requirements.txt  run_uvicorn_main.bat  ultils.py
assets/: assist_best_model_epoch8_20251012_052209.pt
data/: database.json
src/: database.py  inference.py  load_assist.py  logger.py  main.py  router_chats.py  router_voice.py  ultils.py  voice_model.py  voice_ultils.py
src/aasist/: main.py
